--- a/main.tex
+++ b/main.tex
@@ -1570,12 +1570,12 @@ The following general characteristic observations are made:
 			\begin{tabular}{l|r}
 				\rowcolor{tblhead}
 				Binary coding of the centroid                                                                    &  Type     \\ 
-				\midrule
+				\hline
 				0:0:0:0:0:0:294:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0 &  centroid \\ 
 				\multicolumn{2}{l}{}                                                                             \\ 
 				\rowcolor{tblhead}
 				Binary coding of jobs in the cluster                                                             &  Count    \\ 
-				\midrule
+				\hline
 				0:0:0:0:0:0:359:96:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0   &  95       \\ 
 				0:0:0:0:0:0:295:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0    &  62       \\ 
 				0:0:0:0:0:0:0:0:0:0:0:0:4:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0  &  47       \\ 
@@ -1629,10 +1629,10 @@ The following is characteristic for this algorithm:
 			\begin{tabular}{l|r}
 				\rowcolor{tblhead}
 				Binary coding of the centroid                                                                         &  Type     \\
-				\midrule
+				\hline
 				272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272            &  centroid \\
 				\multicolumn{2}{l}{}                                                                   \\
-				\midrule
+				\hline
 				\rowcolor{tblhead}
 				Binary coding of jobs in the cluster                                                                          &  Count    \\
 				272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272            &  528      \\
@@ -1694,12 +1694,12 @@ In the selected cluster, there is mostly one segment of I/O activity.
 				\multicolumn{4}{l|}{Hexadecimal coding} & \\
 				\rowcolor{tblhead}
 				md\_file\_create  & md\_file\_delete  & md\_mod           & read\_calls       & Type     \\
-				\midrule
+				\hline
 				0:...:0           & 0:0:0:1:0:0:0:0:0 & 0:...:0           & 0:...:0           & centroid \\
 				\multicolumn{5}{l}{}\\
 				\rowcolor{tblhead}
 				md\_file\_create  & md\_file\_delete  & md\_mod           & read\_calls       & Count    \\
-				\midrule
+				\hline
 				0:...:0           & 0:0:0:0:0:0:1:0:0 & 0:...:0           & 0:...:0           & 606      \\
 				0:...:0           & 0:0:0:0:0:0:0:0:1 & 0:...:0           & 0:...:0           & 562      \\
 				0:...:0           & 0:...:0           & 0:...:0           & 0:0:0:0:0:0:1:0:0 & 429      \\
@@ -1787,12 +1787,12 @@ In the selected cluster, jobs with a length of 4 have mostly 1 the activity of o
 				\multicolumn{3}{l|}{Hexadecimal coding} &            \\
 				\rowcolor{tblhead}
 				md\_file\_delete     &  md\_mod   & md\_other & Type     \\
-				\midrule
+				\hline
 				0:\dots:0            &  0:0:1:0   & 0:0:1:0   & centroid \\
 				\multicolumn{4}{l}{} \\
 				\rowcolor{tblhead}
 				md\_file\_delete     &  md\_mod   & md\_other & Count    \\
-				\midrule
+				\hline
 				0:\dots:0            &  0:\dots:0 & 0:0:1:0   & 5,010    \\
 				0:\dots:0            &  0:\dots:0 & 0:0:2:0   & 1,963    \\
 				0:0:1:0              &  0:\dots:0 & 0:\dots:0 & 1,099    \\
@@ -1850,12 +1850,12 @@ General cluster characteristics:
 			 \multicolumn{2}{l|}{Hexadecimal coding} &              \\
 			 \rowcolor{tblhead}
 			 md\_file\_delete     &  md\_mod     & Type     \\
-			 \midrule
+			 \hline
 			 4:0:0:0:0:0          &  4:0:0:0:0:0 & centroid \\
 			 \multicolumn{3}{l}{} \\
 			 \rowcolor{tblhead}
 			 md\_file\_delete     &  md\_mod     & Count    \\
-			 \midrule
+			 \hline
 			 4                    &  4           & 2329     \\
 			 4:0:0:0:0:0          &  4:0:0:0:0:0 & 1773     \\
 			 4:0                  &  4:0         & 224      \\
@@ -1922,13 +1922,13 @@ We find that the identified jobs in the cluster are sufficiently related.
 			\begin{tabular}{l|r}
 				\rowcolor{tblhead}
 				Binary coding                                                                                          &  Type     \\
-				\midrule
+				\hline
 				192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64 &  job      \\
 				192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        &  centroid \\
 				\multicolumn{2}{l}{}                                                                                   \\
 				\rowcolor{tblhead}
 				Binary coding                                                                                          &  Count    \\
-				\midrule
+				\hline
 				192:192:192:192:192:454:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        &  5        \\
 				192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        &  3        \\
 				192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        &  3        \\
@@ -1980,13 +1980,13 @@ Compared to BIN, the cluster is smaller but the jobs have a more similar ending.
 			\begin{tabular}{l|r}
 				\rowcolor{tblhead}
 				Binary coding                                                                                             &  Type     \\
-				\midrule
+				\hline
 				192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    &  job      \\
 				511:238:192:510:192:224:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64        &  centroid \\
 				\multicolumn{2}{l}{}                                                                                      \\
 				\rowcolor{tblhead}
 				Binary coding                                                                                             &  Count    \\
-				\midrule
+				\hline
 				0:224:192:192:192:192:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64          &  1        \\
 				192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    &  1        \\
 				192:192:193:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64               &  1        \\
@@ -2038,12 +2038,12 @@ While sum() is better for visualization, the mean value allows us to build simpl
 				\multicolumn{2}{l|}{Hexadecimal coding} & \\
 				\rowcolor{tblhead}
 				md\_other                                           &  read\_calls                                           & Type     \\ 
-				\midrule
+				\hline
 				0:\dots:0                                           &  3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
 				0:\dots:0                                           &  8:8:8:8:8:2:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\ 
 				\multicolumn{3}{l}{}                                \\ 
 				\rowcolor{tblhead}      md\_other                   &  read\_calls                                           & Count    \\ 
-				\midrule
+				\hline
 				0:\dots:0                                           &  0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
 				0:\dots:0                                           &  8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
 				0:0:0:4:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 &  0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
@@ -2089,13 +2089,13 @@ Again, the jobs look similar, however, the increase in performance and drop in s
 				Hexadecimal coding & \\
 				\rowcolor{tblhead}
 				read\_calls                                           & Type     \\
-				\midrule
+				\hline
 				3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\
 				8:8:8:8:8:2:4:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\
 				\multicolumn{2}{l}{}\\
 				\rowcolor{tblhead}
 				read\_calls                                           & Count    \\
-				\midrule
+				\hline
 				8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\
 				8:8:8:8:8:5:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 2        \\
 				3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 1        \\
@@ -2141,13 +2141,13 @@ Even with a smaller SIM value, the jobs appear related while they cover a variet
 				Hexadecimal coding & \\
 				\rowcolor{tblhead}
 				read\_calls                                           & Type     \\
-				\midrule
+				\hline
 				3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\
 				8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & centroid \\
 				\multicolumn{2}{l}{}\\
 				\rowcolor{tblhead}
 				read\_calls                                           & Count    \\
-				\midrule
+				\hline
 				8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\
 				8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\
 				7:7:7:7:7:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 2        \\
